[gd_scene load_steps=4 format=3 uid="uid://bjbm3vwf3sqld"]

[ext_resource type="Script" uid="uid://b03gabtje2gm5" path="res://SYNC TESTING/sync_game.gd" id="1_b6b1m"]
[ext_resource type="PackedScene" uid="uid://xuaexscyabkr" path="res://game/lobby/lobby_ui.tscn" id="2_ysjcx"]
[ext_resource type="PackedScene" path="res://SYNC TESTING/sync_bob.tscn" id="3_ysjcx"]

[node name="SyncGame" type="Node2D"]
script = ExtResource("1_b6b1m")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="LobbyUI" parent="." instance=ExtResource("2_ysjcx")]
unique_name_in_owner = true

[node name="DebugEndGame" type="Button" parent="."]
offset_left = -445.0
offset_top = 225.0
offset_right = -269.0
offset_bottom = 269.0
text = "Debug End Game"

[node name="Label" type="Label" parent="."]
offset_left = 256.0
offset_top = 228.0
offset_right = 412.0
offset_bottom = 251.0

[node name="SyncBob" parent="." instance=ExtResource("3_ysjcx")]

[connection signal="pressed" from="DebugEndGame" to="." method="_on_debug_end_game_pressed"]
